# C-warirrior

./: .cursorrules  .env.example  .gitignore  .mcp.json  .vercelignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  GEMINI.md  LICENSE  README.md  SECURITY_REVIEW.md  SKILL.md  package-lock.json  package.json  railway.toml  vercel.json
.agents/: COORDINATION.md  QUICK_LAUNCH.md  README.md
.agents/prompts/: AGENT_A_DB_PERSISTENCE.md  AGENT_A_FILE_IO.md  AGENT_B_FRONTEND_FIXES.md  AGENT_B_STRINGS.md  AGENT_C_CONTENT_L16_20.md  AGENT_C_SYSTEM.md  AGENT_D_CONTENT_L21_25.md
.claude/skills/c-puzzle-designer/: SKILL.md
.factory/skills/code-warrior-architect/: SKILL.md
.factory/skills/game-metaphor-mapper/: SKILL.md
.factory/skills/rust-tauri-patterns/: SKILL.md
docs/: ARCHITECTURE.md  AUDIT_FINDINGS.md  CURRICULUM.md  DECISIONS.md  GAME_DESIGN.md  GLOSSARY.md  IMPLEMENTATION.md  logic-mindmap.md
docs/ai/: README.md  cleanup-agent-backend.md  cleanup-agent-frontend.md  cleanup-entry.md  cleanup-plan-two-agents.md  gemini-usage.md  mcp-servers.md  perf-rendering-loading-spec.md  skills.md  wasm-game-core-spec.md
docs/architecture/: decisions.md  system.md
docs/core/: CONSTRAINTS.md  DOMAINS.md  TESTING.md  WORKFLOWS.md
docs/curriculum/: progression.md
docs/dev_guide/: setup.md
docs/game_design/: glossary.md  mechanics.md
docs/interfaces/: game-state.md  level-schema.md  tauri-commands.md
migrations/: 001_create_users.sql  002_create_save_slots.sql  003_create_user_devices.sql  004_auth_users.sql  005_oauth_connections.sql  006_email_tokens.sql  007_add_user_id_fk.sql
src/: Cargo.toml  events.rs  lib.rs
src-api/: .gitignore  Cargo.toml  Dockerfile  README.md  nsjail.cfg  test-endpoints.sh
src-api/src/: main.rs
src-api/src/auth/: handlers.rs  jwt.rs  mod.rs  password.rs
src-api/src/auth/oauth/: github.rs  google.rs  mod.rs
src-api/src/auth_middleware/: auth.rs  ban.rs  mod.rs  rate_limit.rs  verification.rs
src-api/src/db/: mod.rs  models.rs  operations.rs  operations_clean.rs  schema.rs
src-api/src/email/: mod.rs  sender.rs  templates.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: code.rs  game.rs  levels.rs  mod.rs  progress.rs  save.rs
src-ui/: package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
src-ui/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
src-ui/.svelte-kit/output/client/.vite/: manifest.json
src-ui/.svelte-kit/output/server/: manifest.js
src-ui/scripts/: generate-pixel-art.cjs
src-ui/src/: app.css  app.html
src-ui/src/lib/: api.ts  types.ts
src-ui/src/lib/backend/: http.ts  index.ts  tauri.ts  types.ts  wasm.ts
src-ui/src/lib/components/: Achievements.svelte  AuthGuard.svelte  CodeEditor.svelte  CodeTerminal.svelte  ErrorBoundary.svelte  GameCanvas.svelte  GameHUD.svelte  GameWorld.svelte  HUD.svelte  LevelIntroModal.svelte  LevelMarker.svelte  LevelPreviewModal.svelte  LevelSelect.svelte  MainMenu.svelte  Menu.svelte  ProgressTracker.svelte  QuestHUD.svelte  SaveLoad.svelte  Settings.svelte  Toast.svelte  WorldMap.svelte
src-ui/src/lib/config/: themes.ts  worldmap.ts
src-ui/src/lib/data/: concept-previews.ts
src-ui/src/lib/engine/: animation.ts  assets-cache.ts  assets.ts  audio.ts  camera.ts  constants.ts  gameloop.ts  index.ts  input.ts  particles.ts  renderer.ts
src-ui/src/lib/stores/: auth.svelte.ts  game.svelte.ts
src-ui/src/lib/types/: assets.ts
src-ui/src/lib/wasm/: code_warrior_wasm.d.ts  code_warrior_wasm.js  code_warrior_wasm_bg.wasm  code_warrior_wasm_bg.wasm.d.ts  package.json
src-ui/src/routes/: +layout.svelte  +page.svelte
src-ui/src/routes/account/: +page.svelte
src-ui/src/routes/forgot-password/: +page.svelte
src-ui/src/routes/login/: +page.svelte
src-ui/src/routes/register/: +page.svelte
src-ui/src/routes/reset-password/: +page.svelte
src-ui/src/routes/verify-email/: +page.svelte
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
src/assets/: levels.json
src/assets/maps/: L01_first_spell.json  L02_empty_backpack.json  L03_gatekeeper.json  L04_forest.json  L04_repeating_strike.json  L05_array_fortress.json  L05_darkwoods.json  L06_river.json  L06_spell_scroll.json  L07_cavern.json  L07_damage_calc.json  L08_mountain.json  L08_stack_spire.json  L09_global_artifact.json  L09_ice.json  L10_recursive_mirror.json  L10_temple.json  L11_address_spell.json  L11_library.json  L12_crypt.json  L12_grappling_hook.json  L13_dereference_pull.json  L13_lake.json  L14_array_navigator.json  L14_forge.json  L15_lair.json  L15_null_trap.json  L16_blueprint_scroll.json  L16_courtyard.json  L17_chest_contents.json  L17_throne.json  L18_teleport_chest.json  L18_treasury.json  L19_dungeon.json  L19_guild_hierarchy.json  L20_army_roster.json  L20_passage.json  L21_stairs.json  L21_summon_land.json  L22_alchemy.json  (+7 more)
src/commands/: code.rs  game.rs  levels.rs  mod.rs  progress.rs
src/compiler/: mod.rs  sandbox.rs  seccomp_sandbox.rs
src/game/: constants.rs  inventory.rs  map.rs  mod.rs  physics.rs  player.rs  progression.rs  state.rs  world.rs
src/levels/: harness.rs  loader.rs  map_loader.rs  mod.rs  puzzle.rs  validator.rs
src/models/: mod.rs
src/persistence/: mod.rs
tools/: README.md  apply-worldconfigs.py  build-wasm.sh  c_compiler_mcp.py  convert-ascii-to-worldconfig.py  deploy-and-validate.sh  fix-sprites.cjs  generate-assets.cjs  generate-theme-sprites.py  generate_assets.py  generate_map.py  level_tools_mcp.py  memory_mcp.py  playwright-validation.js  project_health_mcp.py  run-tests.js  test-all-levels.py  test-local-and-deploy.sh  test-local-e2e.sh  test_runner_mcp.py
tools/tests/api/: health.test.js
tools/tests/e2e/: boot.test.js  level-flow.test.js  quest-system.test.js
tools/tests/fixtures/: solutions.js
(+27 files in other folders)
