[workspace]
members = [
    "src",
    "src-tauri",
    "src-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
code-warrior = { path = "src" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"

[profile.release]
opt-level = 3
codegen-units = 16
lto = false
debug = 0
panic = "abort"
