[package]
name = "code-warrior-api"
version.workspace = true
edition.workspace = true

[dependencies]
code-warrior.workspace = true
axum = "0.7"
tokio.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
dotenvy = "0.15"
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1.0"
futures = "0.3"
dashmap = "5"
