[package]
name = "code-warrior-api"
version.workspace = true
edition.workspace = true

[dependencies]
# Enable seccomp feature for Linux builds (secure C code sandbox)
code-warrior = { workspace = true, features = ["seccomp"] }
axum = "0.7"
tokio.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }
dotenvy = "0.15"
jsonwebtoken = "9"
argon2 = "0.5"  # Password hashing (replaces bcrypt)
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"  # Error handling for auth module
sha2 = "0.10"  # Token hashing
hex = "0.4"  # Hex encoding for tokens
anyhow = "1.0"
futures = "0.3"
dashmap = "5"

# OAuth and HTTP client (Agent 3)
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
base64 = "0.21"
