[package]
name = "code-warrior"
version = "0.1.0"
edition = "2021"

[lib]
name = "code_warrior"
path = "lib.rs"

[features]
default = ["compiler"]
compiler = ["tokio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

# tokio only needed for compiler (not WASM-compatible)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3"
